--- a/trunk/CEP/BB/doc/bb-requirements/bb-requirements.tex
+++ b/trunk/CEP/BB/doc/bb-requirements/bb-requirements.tex
@@ -189,9 +189,9 @@
     \label{subsec:pattern-components}
 
       \begin{figure}
-        \includegraphics[]{../figures/overview.eps}
+        \includegraphics[]{../figures/selfcal-overview.eps}
         \hypertarget{fig:overview}{}
-        \caption{the crude structure of a selfcal-BlackBoard\label{fig:overview}}
+        \caption{the crude structure of a selfcal-BlackBoard\label{fig:selfcal-overview}}
       \end{figure}
 
       In \hyperlink{fig:overview}{figure \ref{fig:overview}} a high
