--- a/CEP/BB/doc/bb-requirements/bb-requirements.tex
+++ b/CEP/BB/doc/bb-requirements/bb-requirements.tex
@@ -190,15 +190,15 @@
 
       \begin{figure}
         \includegraphics[]{../figures/selfcal-overview.eps}
-        \hypertarget{fig:overview}{}
+        \hypertarget{fig:selfcal-overview}{}
         \caption{the crude structure of a selfcal-BlackBoard\label{fig:selfcal-overview}}
       \end{figure}
 
-      In \hyperlink{fig:overview}{figure \ref{fig:overview}} a high
+      In \hyperlink{fig:selfcal-overview}{figure \ref{fig:selfcal-overview}} a high
       level design of a blackboard framework is shown. The
       communication from the TreadController or the ThreadWatcher to
-      the WorkerProxy in \hyperlink{fig:overview}{Figure
-      \ref{fig:overview}} and back is all done by means of the
+      the WorkerProxy in \hyperlink{fig:selfcal-overview}{Figure
+      \ref{fig:selfcal-overview}} and back is all done by means of the
       BlackBoard.
 
       The items in the diagram are \begin{itemize}
